tests/errors/compiler/array_size_must_be_int/float_array_size.c
int main()
{
	float a = 1.1;
	int arr[a];
	return 0;
}
